--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Homework3</title>
+    <title>Homework4</title>
   </head>
   <body>
     <!-- Шапка сторінки -->
@@ -68,6 +68,11 @@
           <h2 class="visually-hidden">Our Features</h2>
           <ul class="feature-list">
             <li class="item">
+              <div class="features-icon">
+                <svg class="" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Strategy</h3>
               <p class="feature-text">
                 Our goal is to identify the business problem to walk away with
@@ -75,6 +80,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="features-icon">
+                <svg class="icon-item" width="64px" height="64px" >
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Punctuality</h3>
               <p class="feature-text">
                 Bring the key message to the brand's audience for the best price
@@ -82,6 +92,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="features-icon">
+                <svg class="" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Diligence</h3>
               <p class="feature-text">
                 Research and confirm brands that present the strongest digital
@@ -89,6 +104,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="features-icon">
+                <svg class="" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Technologies</h3>
               <p class="feature-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -145,6 +165,36 @@
               <div class="card-content">
                 <h3 class="name">Mark Guerrero</h3>
                 <p class="position">Product Designer</p>
+                <ul class="card-icons-list">
+                    <li>
+                      <a class="social-link-icon" href="">
+                        <svg class="" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                                            </svg>
+                      </a>
+                  </li>
+                    <li>
+                      <a class="social-link-icon" href="">
+                        <svg class="" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a class="social-link-icon" href="">
+                        <svg class="" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a class="social-link-icon" href="">
+                        <svg class="" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                </ul>
               </div>
             </li>
             <li class="flex-element card">
@@ -157,6 +207,36 @@
               <div class="card-content">
                 <h3 class="name">Tom Ford</h3>
                 <p class="position">Frontend Developer</p>
+                <ul class="card-icons-list">
+                  <li>
+                    <a class="social-link-icon" href="">
+                      <svg class="" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                                          </svg>
+                    </a>
+                </li>
+                  <li>
+                    <a class="social-link-icon" href="">
+                      <svg class="" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link-icon" href="">
+                      <svg class="" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link-icon" href="">
+                      <svg class="" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+              </ul>
               </div>
             </li>
             <li class="flex-element card">
@@ -169,6 +249,36 @@
               <div class="card-content">
                 <h3 class="name">Camila Garcia</h3>
                 <p class="position">Marketing</p>
+                <ul class="card-icons-list">
+                  <li>
+                    <a class="social-link-icon" href="">
+                      <svg class="" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                                          </svg>
+                    </a>
+                </li>
+                  <li>
+                    <a class="social-link-icon" href="">
+                      <svg class="" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link-icon" href="">
+                      <svg class="" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link-icon" href="">
+                      <svg class="" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+              </ul>
               </div>
             </li>
             <li class="flex-element card">
@@ -181,6 +291,97 @@
               <div class="card-content">
                 <h3 class="name">Daniel Wilson</h3>
                 <p class="position">UI Designer</p>
+                <ul class="card-icons-list">
+                  <li>
+                    <a class="social-link-icon" href="">
+                      <svg class="" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                                          </svg>
+                    </a>
+                </li>
+                  <li>
+                    <a class="social-link-icon" href="">
+                      <svg class="" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link-icon" href="">
+                      <svg class="" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-link-icon" href="">
+                      <svg class="" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+              </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <h2 class="section-title">Customers</h2>
+          <ul class="customers-icon-list">
+            <li>
+              <div class="customers-icon">
+                <a class="customers-icon-link" href="">
+                  <svg class="logo-icon" width="104px" height="56px" fill="currentColor">
+                    <use href="./images/icons.svg#icon-logo-1"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="customers-icon">
+                <a class="customers-icon-link" href="">
+                  <svg class="logo-icon" width="104px" height="56px" fill="currentColor">
+                    <use href="./images/icons.svg#icon-logo-2"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="customers-icon">
+                <a class="customers-icon-link" href="">
+                  <svg class="logo-icon" width="104px" height="56px" fill="currentColor">
+                    <use href="./images/icons.svg#icon-logo-3"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="customers-icon">
+                <a class="customers-icon-link" href="">
+                  <svg class="logo-icon" width="104px" height="56px" fill="currentColor">
+                    <use href="./images/icons.svg#icon-logo-4"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="customers-icon">
+                <a class="customers-icon-link" href="">
+                  <svg class="logo-icon" width="104px" height="56px" fill="currentColor">
+                    <use href="./images/icons.svg#icon-logo-5"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="customers-icon">
+                <a class="customers-icon-link" href="">
+                  <svg class="logo-icon" width="104px" height="56px" fill="currentColor">
+                    <use href="./images/icons.svg#icon-logo-6"></use>
+                  </svg>
+                </a>
               </div>
             </li>
           </ul>
@@ -189,15 +390,56 @@
     </main>
     <!-- Підвал сторінки -->
     <footer>
-      <div class="container">
-        <a class="logo2" href="./index.html"
-          ><span class="web">Web</span>Studio</a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
+      <section class="container">
+        <ul class="footer-list">
+          <li>
+            <div>
+              <a class="logo2" href="./index.html"
+                ><span class="web">Web</span>Studio</a
+              >
+              <p class="footer-text">
+                Increase the flow of customers and sales for your business with
+                digital marketing & growth solutions.
+              </p>
+            </div>
+          </li>
+            <li>
+              <div>
+              <h3 class="footer-title">Social media</h3>
+              <ul class="card-icons-list">
+                <li>
+                  <a class="social-link-icon-footer" href="">
+                    <svg class="" width="24px" height="24px">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                  </a>
+              </li>
+                <li>
+                  <a class="social-link-icon-footer" href="">
+                    <svg class="" width="24px" height="24px">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li> 
+                  <a class="social-link-icon-footer" href="">
+                    <svg class="" width="24px" height="24px">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-link-icon-footer" href="">
+                    <svg class="" width="24px" height="24px">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+                  </ul>
+                  </div>
+            </li>
+        </ul>
+      </section>
     </footer>
   </body>
 </html>
