--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Homework3</title>
+    <title>Homework4</title>
   </head>
   <body>
     <!-- Шапка сторінки -->
@@ -183,7 +183,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="card-item">
               <a href="./portfolio.html">
                 <img
                   src="./images/imghmw29.jpg"
@@ -203,15 +203,56 @@
     </main>
     <!-- Підвал сторінки -->
     <footer>
-      <div class="container">
-        <a class="logo2" href="./index.html"
-          ><span class="web">Web</span>Studio</a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
+      <section class="container">
+        <ul class="footer-list">
+          <li>
+            <div>
+              <a class="logo2" href="./index.html"
+                ><span class="web">Web</span>Studio</a
+              >
+              <p class="footer-text">
+                Increase the flow of customers and sales for your business with
+                digital marketing & growth solutions.
+              </p>
+            </div>
+          </li>
+            <li>
+              <div>
+              <h3 class="footer-title">Social media</h3>
+              <ul class="card-icons-list">
+                <li>
+                  <a class="social-link-icon-footer" href="">
+                    <svg class="" width="24px" height="24px">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                  </a>
+              </li>
+                <li>
+                  <a class="social-link-icon-footer" href="">
+                    <svg class="" width="24px" height="24px">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-link-icon-footer" href="">
+                    <svg class="" width="24px" height="24px">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="social-link-icon-footer" href="">
+                    <svg class="" width="24px" height="24px">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+                  </ul>
+                  </div>
+            </li>
+        </ul>
+      </section>
     </footer>
   </body>
 </html>
