--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
           </ul>
           <ul class="card-set">
             <li class="card-item">
-              <a href="./portfolio.html">
+              <a class="card-item-link" href="./portfolio.html">
                 <img
                   src="./images/imghmw21.jpg"
                   alt="Bank's app"
@@ -86,7 +86,7 @@
               </a>
             </li>
             <li class="card-item">
-              <a href="./portfolio.html">
+              <a class="card-item-link" href="./portfolio.html">
                 <img
                   src="./images/imghmw22.jpg"
                   alt="Scanning process"
@@ -100,7 +100,7 @@
               </a>
             </li>
             <li class="card-item">
-              <a href="./portfolio.html">
+              <a class="card-item-link" href="./portfolio.html">
                 <img
                   src="./images/imghmw23.jpg"
                   alt="Laptop and Phone"
@@ -114,7 +114,7 @@
               </a>
             </li>
             <li class="card-item">
-              <a href="./portfolio.html">
+              <a class="card-item-link" href="./portfolio.html">
                 <img
                   src="./images/imghmw24.jpg"
                   alt="Taxi driver"
@@ -128,7 +128,7 @@
               </a>
             </li>
             <li class="card-item">
-              <a href="./portfolio.html">
+              <a class="card-item-link" href="./portfolio.html">
                 <img
                   src="./images/imghmw25.jpg"
                   alt="Smartphone screenshot"
@@ -142,7 +142,7 @@
               </a>
             </li>
             <li class="card-item">
-              <a href="./portfolio.html">
+              <a class="card-item-link" href="./portfolio.html">
                 <img
                   src="./images/imghmw26.jpg"
                   alt="Happy girl"
@@ -156,7 +156,7 @@
               </a>
             </li>
             <li class="card-item">
-              <a href="./portfolio.html">
+              <a class="card-item-link" href="./portfolio.html">
                 <img
                   src="./images/imghmw27.jpg"
                   alt="Instagram stories"
@@ -170,7 +170,7 @@
               </a>
             </li>
             <li class="card-item">
-              <a href="./portfolio.html">
+              <a class="card-item-link" href="./portfolio.html">
                 <img
                   src="./images/imghmw28.jpg"
                   alt="bags of food"
@@ -184,7 +184,7 @@
               </a>
             </li>
             <li class="card-item">
-              <a href="./portfolio.html">
+              <a class="card-item-link" href="./portfolio.html">
                 <img
                   src="./images/imghmw29.jpg"
                   alt="Coffee with milk"
