--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <!-- Шапка сторінки -->
-    <header class="header">
+    <header>
       <!-- Навігація на інші сторінки -->
       <div class="container header-container">
         <nav class="header-nav">
@@ -331,58 +331,46 @@
           <h2 class="section-title">Customers</h2>
           <ul class="customers-icon-list">
             <li>
-              <div class="customers-icon">
-                <a class="customers-icon-link" href="">
+                <a class="customers-icon" href="">
                   <svg class="logo-icon" width="104px" height="56px" fill="currentColor">
                     <use href="./images/icons.svg#icon-logo-1"></use>
                   </svg>
                 </a>
-              </div>
             </li>
             <li>
-              <div class="customers-icon">
-                <a class="customers-icon-link" href="">
+                <a class="customers-icon" href="">
                   <svg class="logo-icon" width="104px" height="56px" fill="currentColor">
                     <use href="./images/icons.svg#icon-logo-2"></use>
                   </svg>
                 </a>
-              </div>
             </li>
             <li>
-              <div class="customers-icon">
-                <a class="customers-icon-link" href="">
+                <a class="customers-icon" href="">
                   <svg class="logo-icon" width="104px" height="56px" fill="currentColor">
                     <use href="./images/icons.svg#icon-logo-3"></use>
                   </svg>
                 </a>
-              </div>
             </li>
             <li>
-              <div class="customers-icon">
-                <a class="customers-icon-link" href="">
+                <a class="customers-icon" href="">
                   <svg class="logo-icon" width="104px" height="56px" fill="currentColor">
                     <use href="./images/icons.svg#icon-logo-4"></use>
                   </svg>
                 </a>
-              </div>
             </li>
             <li>
-              <div class="customers-icon">
-                <a class="customers-icon-link" href="">
+                <a class="customers-icon" href="">
                   <svg class="logo-icon" width="104px" height="56px" fill="currentColor">
                     <use href="./images/icons.svg#icon-logo-5"></use>
                   </svg>
                 </a>
-              </div>
             </li>
             <li>
-              <div class="customers-icon">
-                <a class="customers-icon-link" href="">
+                <a class="customers-icon" href="">
                   <svg class="logo-icon" width="104px" height="56px" fill="currentColor">
                     <use href="./images/icons.svg#icon-logo-6"></use>
                   </svg>
                 </a>
-              </div>
             </li>
           </ul>
         </div>
